# Hovedprosjekt

./: .gitignore  =1.9.41  LICENSE  LMSTUDIO_SETUP.md  PROSJEKTBESKRIVELSE.md  QUICKSTART.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  config.json  config.json.bak  pyproject.toml  requirements.txt  setup.py  verify_mcp_usage.py
.claude/: settings.local.json
AI-dev/: prompt0-01.txt
LMStudio/: Original-settings.txt
_Trash/: CUDA_FIX_SUMMARY.md  TROUBLESHOOTING_CUDA.md  config.json.old  config_lmstudio.json  config_parser_enhancements.py  mcp_client.py  start_mcpo.bat  start_mcpo.ps1  structured_prompt_builder.py.bak  test_mcp_integration.py
automation/: __init__.py  config_parser.py  logger.py  mcp_client.py  metrics_dashboard.py  metrics_tracker.py  processor.py  structured_prompt_builder.py  validator.py  watcher.py
configs/: 15-commands-10-features.txt  2-dis-venstre-sw01.txt  Demo-switch-01.txt  SAMPLE-SWITCH.txt  Switch1_startup-config.txt  TEST-03.txt  aksess-sw01.txt  switch-01.txt  switch-02.txt  switch-06-1.txt  switch-07.txt  switch-09-6.txt
docs/: ARCHITECTURE.md  INDEX.md  INTEGRATION_COMPLETE.md  LLM-SETUP.md  LMSTUDIO_OPTIMIZATION.md  LOGGING-GUIDE.md  LOGGING.md  MIGRATION_COMPLETE.md  PROSJEKTBESKRIVELSE.md  PYTHON_VERSION_README.md  Project Description.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  example prompt condensed.txt  example prompt.txt
docs_cache/: CISCO_DOCUMENTATION_BUILDER.md  basic_commands.json  cisco_ios_commands_enhanced.json  cisco_ios_interface_commands.json
mcp_server/: SERVER-V2-README.md  server-v2.py
metrics/: Usage.md  processing_metrics.db
output/: 1-aksess-sw01-10.md  1-aksess-sw01-11.md  1-aksess-sw01-12.md  1-aksess-sw01-13.md  1-aksess-sw01-14.md  1-aksess-sw01-2.md  1-aksess-sw01-4.md  1-aksess-sw01-5.md  1-aksess-sw01-6.md  1-aksess-sw01-7.md  1-aksess-sw01-8.md  1-aksess-sw01-9.md  1-aksess-sw01.md  15-commands-10-features.md  2-dis-venstre-sw01.md  3-sentral-router-01-2.md  4-dist-hoyre-sw01.md  Demo-switch.md  RDP-server-sw01.md  SAMPLE-SWITCH.md  TEST-03.md  aksess-sw01 – Kopi.md  aksess-sw01-validation.json  aksess-sw01.md  aksess-sw02-validation.json  aksess-sw02.md  aksess-sw021-validation.json  aksess-sw021.md  aksess-sw03-ny-AI-validation-final.json  aksess-sw03-ny-AI.md  dist-hoyre-sw-01.md  dist-venstre-sw01.md  router-0-v2.md  router-0-v3-validation.json  router-0-v3.md  router-0.md  switch-01-1.md  switch-01-10.md  switch-01-2.md  switch-01-3-validation.json  (+133 more)
temp-configs/: RDP-server-sw01.txt  WEB-server-sw01.txt  router-0.txt
temp-output/: 3-sentral-router-01-2.md  RDP-server-sw01.md  TEST-03.md  aksess-sw01-structured.json  aksess-sw01.md  dist-hoyre-sw-01.md  router-0.md
tests/: README.md  run_tests.bat  run_tests.ps1  run_tests.py  test_config_parser.py  test_integration.py  test_llm.py  (+1 more)
(+677 files in other folders)
