[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_backend"

[project]
name = "cisco-config-documentation"
version = "1.0.0"
description = "Automated Cisco configuration documentation system using local LLM and MCP"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Redacted", email = "Redacted.Redacted@Redacted.com"}
]
keywords = ["cisco", "network", "documentation", "automation", "llm", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "watchdog>=3.0.0",
    "GitPython>=3.1.40",
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
cisco-watcher = "automation.watcher:main"
cisco-processor = "automation.processor:main"
cisco-mcp-server = "mcp_server.server:main"

[tool.setuptools]
packages = ["automation", "mcp_server"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']